force-app/main/default/objects/Grants_Review_Team__c/Grants_Review_Team__c.object-meta.xml
<CustomObject>
    <label>Grants Review Team</label>
    <nameField>
        <displayFormat>RTN-{000000}</displayFormat>
        <label>Review Team Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Grants Review Team</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>