force-app/main/default/objects/Grants_Review_Team__c/fields/Active__c.field-meta.xml
<CustomField>
    <fullName>Active__c</fullName>
    <defaultValue>true</defaultValue>
    <description>Case 00010921 - Option to make reviewer active/inactive as needed. This will enable/disable them for notifications only.</description>
    <label>Active</label>
    <type>Checkbox</type>
</CustomField>