force-app/main/default/objects/Grants_Review_Team__c/fields/Disclosure_Statement_Required__c.field-meta.xml
<CustomField>
    <fullName>Disclosure_Statement_Required__c</fullName>
    <inlineHelpText>This is answered by the review team member, do not set this field.</inlineHelpText>
    <label>Disclosure Statement Required</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>