force-app/main/default/objects/Grants_Review_Team__c/fields/External_Reviewer_Registration_URL__c.field-meta.xml
<CustomField>
    <fullName>External_Reviewer_Registration_URL__c</fullName>
    <description>Registration page URL considering the portal user vs internal user context.</description>
    <formula>IF(
  AND(
    ISBLANK(Member__c),
    NOT(ISBLANK(Email__c))
  ),
  $Label.CORE_Branded_NYSERDA_Portal_URL &amp; &quot;apex/Core_Registration_Page?SolicitationID=&quot; &amp; Solicitation__r.Id &amp; &quot;&amp;reviewteammemberid=&quot;&amp; Id,
  &quot;&quot;
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>User Registration page url for external reviewer.</inlineHelpText>
    <label>External Reviewer Registration URL</label>
    <type>Text</type>
</CustomField>