force-app/main/default/objects/Grants_Review_Team__c/fields/Is_External_User__c.field-meta.xml
<CustomField>
    <fullName>Is_External_User__c</fullName>
    <formula>Member__r.ContactId != null</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Is External User</label>
    <type>Checkbox</type>
</CustomField>