force-app/main/default/objects/Grants_Review_Team__c/fields/NDA_Page_URL__c.field-meta.xml
<CustomField>
    <fullName>NDA_Page_URL__c</fullName>
    <description>NDA Page URL</description>
    <formula>IF( 
OR(
  ISBLANK(Member__c),
  AND(NOT(ISBLANK(Member__c)),Is_External_User__c)
)
, 
$Label.CORE_Branded_NYSERDA_Portal_URL &amp; &quot;apex/Core_NYSERDA_NDA_Page?SolicitationID=&quot; &amp; Solicitation__r.Id &amp; &quot;&amp;reviewteammemberid=&quot;&amp; Id, 
&quot;&quot; 
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>NDA Page URL</label>
    <type>Text</type>
</CustomField>