force-app/main/default/objects/Grants_Review_Team__c/fields/NDA_Signed_Date__c.field-meta.xml
<CustomField>
    <fullName>NDA_Signed_Date__c</fullName>
    <description>Timestamp of the scoring committee member signing NDA.</description>
    <inlineHelpText>Timestamp of the scoring committee member signing NDA. Do not set this field when setting up a review team member.</inlineHelpText>
    <label>NDA Signed Date</label>
    <type>DateTime</type>
</CustomField>