force-app/main/default/objects/Grants_Review_Team__c/fields/Notification_Type__c.field-meta.xml
<CustomField>
    <fullName>Notification_Type__c</fullName>
    <description>T-03099 - Notification Type</description>
    <label>Notification Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Internal Reviewer NDA Notification</fullName>
            </value>
            <value>
                <fullName>Membered External Reviewer NDA Notification</fullName>
            </value>
            <value>
                <fullName>Non Member External Reviewer NDA Notification</fullName>
            </value>
            <value>
                <fullName>Non Member External Reviewer NDA 2Day Reminder Notification</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>