force-app/main/default/objects/Grants_Review_Team__c/fields/Proposal_Review__c.field-meta.xml
<CustomField>
    <fullName>Proposal_Review__c</fullName>
    <description>Review page URL considering the portal user vs internal user context.</description>
    <formula>IF(
  OR(
    NOT(ISBLANK(Member__r.ContactId)),
    NOT(ISPICKVAL(Member__r.UserType,&apos;Standard&apos;))
  ),
  $Label.CORE_Branded_NYSERDA_Portal_URL,
  $Label.Core_NYSERDA_Internal_URL)
&amp; 
&quot;apex/CORE_Proposal_Review_Page?solicitationID=&quot; 
&amp; Solicitation__r.Id</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Proposal review page url for reviewer</inlineHelpText>
    <label>Proposal Review</label>
    <type>Text</type>
</CustomField>