force-app/main/default/objects/Grants_Review_Team__c/fields/Reviewer_Email__c.field-meta.xml
<CustomField>
    <fullName>Reviewer_Email__c</fullName>
    <description>T-03099 - Reviewer&apos;s email</description>
    <formula>IF(NOT(ISBLANK( Email__c )),Email__c,Member__r.Email)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Reviewer Email</label>
    <type>Text</type>
</CustomField>