force-app/main/default/objects/Grants_Review_Team__c/fields/Role__c.field-meta.xml
<CustomField>
    <fullName>Role__c</fullName>
    <description>S-00724 - track member role</description>
    <formula>IF( Scoring_Committee__c, &quot;scoring committee member&quot;, &quot;review team member&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Role</label>
    <type>Text</type>
</CustomField>