force-app/main/default/objects/Grants_Review_Team__c/fields/Scoring_Committee__c.field-meta.xml
<CustomField>
    <fullName>Scoring_Committee__c</fullName>
    <defaultValue>true</defaultValue>
    <description>S-00704: Indicates a member with Scoring permission. Only Review Team records where Scoring Committee = true should be included in concept paper scoring logic (average score and concept paper result)</description>
    <label>Scoring Committee</label>
    <type>Checkbox</type>
</CustomField>