force-app/main/default/objects/Grants_Review_Team__c/fields/Unique_Identifier__c.field-meta.xml
<CustomField>
    <fullName>Unique_Identifier__c</fullName>
    <caseSensitive>true</caseSensitive>
    <label>Unique Identifier</label>
    <length>100</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>